k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aka
  labels:
    app: aka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aka
  template:
    metadata:
      labels:
        app: aka
    spec:
      containers:
        - name: aka
          image: mckdev/aka
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: configuration
              mountPath: "/app/configuration/"
              readOnly: true
      volumes:
        - name: configuration
          configMap:
            name: aka
            items:
              - key: "configuration.yaml"
                path: "configuration.yaml"
