k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aka
spec:
  selector:
    app: aka
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
