k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-alias-service
spec:
  rules:
  - host: "url-alias.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-alias-service
            port:
              number: 80
